--------------------------------------------------------------------------------
Changes for 2.3.0

New features:
..F....... [ZBXNEXT-1910] added active since and active till columns in maintenance page (Eduard)
..F....... [ZBX-7095] added 'Cancel' button in dashboard configuration (Ivo)
..F....... [ZBXNEXT-2140] enabled Monitoring -> Latest data filter option "Show items without data" by default (Richlv)
..F....... [ZBX-7713] changed the event details page to display all hosts used in a trigger (Ivo)
........S. [ZBXNEXT-1700] added informative messages about database connection restoration (Juris)
..F....... [ZBX-7609] improved frontend messages mute/unmute (Eduard)
..F....... [ZBXNEXT-1291] added clickable links for template names in host, template, host prototype and discovered host property templates tab (Oleg)
..F....... [ZBXNEXT-2073] improved dashboard refresh time menu (Eduard)
..F....... [ZBXNEXT-2073] improved dashboard favourite menu (Eduard)
..F....... [ZBXNEXT-2073] improved service configuration menu (Eduard)
..F....... [ZBXNEXT-2073] improved slide show refresh multiplier popup menu (Eduard)
..F....... [ZBXNEXT-2073] improved trigger log menu (Eduard)
..F....... [ZBXNEXT-2073] improved trigger macros menu (Eduard)
..F....... [ZBXNEXT-2073] updated jQuery to latest 1.10.2 (Eduard)
...G...PS. [ZBXNEXT-453] added a new parameter 'User' to daemon configuration that allows dropping privileges to the specified user (Juris)
....I...S. [ZBXNEXT-581] split database upgrade patches over multiple files for easier maintenance (wiper)
A......... [ZBX-7345] removed deprecated API features (Pavels)

Bug fixes:
....I..... [ZBX-5789] removed unused fields in graph_discovery table (Sasha)
..F....... [ZBX-6350] fixed incorrectly displayed table cell width in Event source details and Event details blocks (Ivo)
..F....... [ZBX-7095] fixed dashboard filter name to show pointer cursor (Ivo)
..F....... [ZBX-7773] fixed jquery buttonset initializing (Eduard)